--- a/pokedex3/Base.lproj/Main.storyboard
+++ b/pokedex3/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="pokedex3" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,103 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TS6-GZ-liH">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="65"/>
+                                <color key="backgroundColor" red="1" green="0.34509803921568627" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="65" id="K3g-sj-xyw"/>
+                                </constraints>
+                            </view>
+                            <searchBar contentMode="redraw" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="NDj-Br-Zo3">
+                                <rect key="frame" x="0.0" y="65" width="375" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="hPy-Uy-I1C"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="uRS-Cf-vg0">
+                                <rect key="frame" x="0.0" y="109" width="375" height="558"/>
+                            </imageView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Uhx-QD-3HK">
+                                <rect key="frame" x="20" y="129" width="335" height="518"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="1zd-u7-mzo">
+                                    <size key="itemSize" width="105" height="105"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PokeCell" id="Frb-iD-mGp" customClass="PokeCell" customModule="pokedex3" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="105" height="105"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="105" height="105"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="4" translatesAutoresizingMaskIntoConstraints="NO" id="Phf-LP-1kl">
+                                                    <rect key="frame" x="0.0" y="0.0" width="105" height="80"/>
+                                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="80" id="i6D-Cl-cFF"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Charmander" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jZe-Ns-yDo">
+                                                    <rect key="frame" x="0.0" y="80" width="105" height="25"/>
+                                                    <color key="backgroundColor" red="1" green="0.34509803919999998" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="13"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="Phf-LP-1kl" secondAttribute="trailing" id="3Nj-rd-G2v"/>
+                                            <constraint firstAttribute="trailing" secondItem="jZe-Ns-yDo" secondAttribute="trailing" id="DwU-V6-FEp"/>
+                                            <constraint firstItem="Phf-LP-1kl" firstAttribute="top" secondItem="Frb-iD-mGp" secondAttribute="top" id="c3N-6Q-Z11"/>
+                                            <constraint firstItem="jZe-Ns-yDo" firstAttribute="top" secondItem="Phf-LP-1kl" secondAttribute="bottom" id="csr-sZ-1qH"/>
+                                            <constraint firstItem="jZe-Ns-yDo" firstAttribute="leading" secondItem="Frb-iD-mGp" secondAttribute="leading" id="cyK-6l-QJ6"/>
+                                            <constraint firstAttribute="bottom" secondItem="jZe-Ns-yDo" secondAttribute="bottom" id="pHJ-w2-fcn"/>
+                                            <constraint firstItem="Phf-LP-1kl" firstAttribute="leading" secondItem="Frb-iD-mGp" secondAttribute="leading" id="rU5-kr-PED"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="nameLbl" destination="jZe-Ns-yDo" id="rAk-RB-2cB"/>
+                                            <outlet property="thumbImg" destination="Phf-LP-1kl" id="97d-lE-Thc"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Uhx-QD-3HK" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="BuS-Fd-Vii"/>
+                            <constraint firstItem="uRS-Cf-vg0" firstAttribute="top" secondItem="NDj-Br-Zo3" secondAttribute="bottom" id="G0M-Nb-sKF"/>
+                            <constraint firstItem="NDj-Br-Zo3" firstAttribute="top" secondItem="TS6-GZ-liH" secondAttribute="bottom" id="MPi-wf-e7E"/>
+                            <constraint firstItem="Uhx-QD-3HK" firstAttribute="top" secondItem="NDj-Br-Zo3" secondAttribute="bottom" constant="20" id="PlP-Z6-yAA"/>
+                            <constraint firstAttribute="trailing" secondItem="TS6-GZ-liH" secondAttribute="trailing" id="RPb-tk-VGv"/>
+                            <constraint firstItem="TS6-GZ-liH" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="VbN-3m-i3q"/>
+                            <constraint firstItem="uRS-Cf-vg0" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="XYA-bW-PDw"/>
+                            <constraint firstAttribute="trailing" secondItem="NDj-Br-Zo3" secondAttribute="trailing" id="Z5b-Dp-JHV"/>
+                            <constraint firstItem="NDj-Br-Zo3" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="bpl-ZI-WsJ"/>
+                            <constraint firstItem="TS6-GZ-liH" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="eSI-Im-E3c"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="uRS-Cf-vg0" secondAttribute="bottom" id="ea6-TR-hAO"/>
+                            <constraint firstAttribute="trailing" secondItem="uRS-Cf-vg0" secondAttribute="trailing" id="hli-eL-2At"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Uhx-QD-3HK" secondAttribute="bottom" constant="20" id="l2V-Gl-ytQ"/>
+                            <constraint firstAttribute="trailing" secondItem="Uhx-QD-3HK" secondAttribute="trailing" constant="20" id="t71-OW-3js"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collection" destination="Uhx-QD-3HK" id="Uqa-z7-mak"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="269.60000000000002" y="168.6656671664168"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="4" width="120" height="120"/>
+        <image name="bg" width="1920" height="1200"/>
+    </resources>
 </document>
